# halo2wrong-sha256

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: sha256.rs
src/: sha256.rs
src/sha256/: table16.rs
src/sha256/table16/: compression.rs  gates.rs  message_schedule.rs  spread_table.rs  util.rs
src/sha256/table16/compression/: compression_gates.rs  compression_util.rs  subregion_digest.rs  subregion_initial.rs  subregion_main.rs
src/sha256/table16/message_schedule/: schedule_gates.rs  schedule_util.rs  subregion1.rs  subregion2.rs  subregion3.rs
